feat(Db4o.jar) Adicionar arquivo de banco de dados. feat(layouts) Adicionar layouts. fix(package) Alterar nome do pacote source para model

--- a/MeusPilas/app/src/main/res/values/strings.xml
+++ b/MeusPilas/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="labelTypeBeneficiary">Select the type of the Beneficiary</string>
     <string name="individuals">Individuals</string>
     <string name="legalEntity">Legal Entity</string>
+    <string name="btLoan">Save Loan!</string>
 </resources>
