--- a/MeusPilas/app/src/main/res/values/strings.xml
+++ b/MeusPilas/app/src/main/res/values/strings.xml
@@ -6,7 +6,16 @@
     <string name="action_settings">Settings</string>
     <string name="type_password">Type your Password!</string>
     <string name="button_login">Access your Account</string>
+    <string name="button_create_account">Create an Account</string>
     <string name="messageUserPlusFail">User data not released by google service!</string>
+    <string name="userNotFound">User not Found!</string>
+    <string name="passwordIncorrect">Password Incorrect!</string>
+    <!-- Create Account-->
+    <string name="createAccountName">User Name</string>
+    <string name="createAccountEmail">E-mail</string>
+    <string name="createAccountPassword">Password</string>
+    <string name="btNewAccount">Create an Account</string>
+    <string name="btCancel">Cancel</string>
     <!-- Home-->
     <string name="title_activity_main">MainActivity</string>
     <string name="labelBalance">Current Balance:</string>
@@ -72,4 +81,5 @@
     <string name="individuals">Individuals</string>
     <string name="legalEntity">Legal Entity</string>
     <string name="btLoan">Save Loan!</string>
+    <string name="title_activity_new_account">NewAccountActivity</string>
 </resources>
